--- a/setup/install_jenkins_docker/tasks/main.yml
+++ b/setup/install_jenkins_docker/tasks/main.yml
@@ -34,7 +34,8 @@
   get_url: 
     url : https://github.com/docker/compose/releases/download/1.25.1-rc1/docker-compose-Linux-x86_64
     dest: /usr/local/bin/docker-compose
-    mode: 'u+x,g+x'
+    mode: 0755
+    force: yes
 
 - name: Add deployer user to Docker group
   user:
@@ -65,6 +66,12 @@
   apt:
     name: jenkins
     state: present
+
+- name: Add jenkins user to Docker group
+  user:
+    name: jenkins
+    groups: docker
+    append: yes
 
 - name: Start Jenkins service on boot
   remote_user: deployer
