--- a/setup/Makefile
+++ b/setup/Makefile
@@ -1,2 +1,5 @@
 install-tf:
 	./bin/install_deps.sh terraform https://releases.hashicorp.com/terraform/1.3.8/terraform_1.3.8_linux_amd64.zip ./bin
+
+install-ansible:
+	pip install ansible
